--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -146,48 +146,6 @@
   data-sets:
 
     ###########################################################################
-    # Replacements:
-
-    replacement-1908-vpp-throughput-lat-tsa-3n-hsw-vhost:
-      csit-vpp-perf-verify-1908-3n-hsw:
-        - 48  # NDRPDR sel vhost
-        - 49  # NDRPDR sel vhost
-        - 52  # NDRPDR sel vhost
-        - 53  # NDRPDR sel vhost
-        - 54  # NDRPDR sel vhost
-        - 55  # NDRPDR sel vhost
-        - 56  # NDRPDR sel vhost
-        - 57  # NDRPDR sel vhost
-        - 58  # NDRPDR sel vhost
-        - 59  # NDRPDR sel vhost
-
-    replacement-1908-vpp-throughput-lat-tsa-3n-skx-vhost:
-      csit-vpp-perf-verify-1908-3n-skx:
-        - 52  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 53  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 55  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 61  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 62  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 63  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 64  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 65  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 66  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 67  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-
-    replacement-1908-vpp-throughput-lat-tsa-2n-skx-vhost:
-      csit-vpp-perf-verify-1908-2n-skx:
-        - 88  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 89  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 91  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 92  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 93  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 94  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 95  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 96  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 97  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-        - 98  # NDRPDR sel vhost - old1908 - vpp build: 19.08-release
-
-    ###########################################################################
     # Plots:
 
     # 3n-hsw
@@ -756,7 +714,7 @@
         - 19  # NDRPDR sel
 
     vpp-performance-changes-3n-skx-h1:
-      csit-vpp-perf-verify-1908-3n-skx:
+      csit-vpp-perf-verify-1908_1-3n-skx:
         - 26  # NDRPDR sel - new1908.1
         - 27  # NDRPDR sel - new1908.1
         - 28  # NDRPDR sel - new1908.1
@@ -789,7 +747,7 @@
         - 38  # NDRPDR sel
 
     vpp-performance-changes-2n-skx-h1:
-      csit-vpp-perf-verify-1908-2n-skx:
+      csit-vpp-perf-verify-1908_1-2n-skx:
         - 39  # NDRPDR sel - new1908.1
         - 40  # NDRPDR sel - new1908.1
         - 41  # NDRPDR sel - new1908.1
@@ -1031,9 +989,9 @@
       csit-vpp-perf-report-iterative-2005-3n-hsw:
         - 13  # MRR
 
-    vpp-performance-changes-3n-skx-mrr-h1:
-      csit-vpp-perf-verify-1908-3n-skx:
-        - 36  # MRR sel
+#    vpp-performance-changes-3n-skx-mrr-h1:
+#      csit-vpp-perf-verify-1908-3n-skx:
+#        - 36  # MRR sel
     vpp-performance-changes-3n-skx-mrr-ref:
       csit-vpp-perf-verify-2001-3n-skx:
         - 50  # MRR sel
@@ -1042,9 +1000,9 @@
       csit-vpp-perf-report-iterative-2005-3n-skx:
         - 6   # MRR sel
 
-    vpp-performance-changes-2n-skx-mrr-h1:
-      csit-vpp-perf-verify-1908-2n-skx:
-        - 69  # MRR sel
+#    vpp-performance-changes-2n-skx-mrr-h1:
+#      csit-vpp-perf-verify-1908-2n-skx:
+#        - 69  # MRR sel
     vpp-performance-changes-2n-skx-mrr-ref:
       csit-vpp-perf-verify-2001-2n-skx:
         - 101 # MRR sel
@@ -2206,16 +2164,6 @@
       - 19  # NDRPDR sel
       - 20  # NDRPDR sel
       - 21  # NDRPDR sel
-      - 48  # NDRPDR sel vhost
-      - 49  # NDRPDR sel vhost
-      - 52  # NDRPDR sel vhost
-      - 53  # NDRPDR sel vhost
-      - 54  # NDRPDR sel vhost
-      - 55  # NDRPDR sel vhost
-      - 56  # NDRPDR sel vhost
-      - 57  # NDRPDR sel vhost
-      - 58  # NDRPDR sel vhost
-      - 59  # NDRPDR sel vhost
       - 39  # MRR sel
     csit-vpp-perf-verify-2001-3n-hsw:
       - 21  # NDRPDR sel
@@ -3461,7 +3409,6 @@
   columns:
     - title: "1908"
       data-set: "vpp-performance-changes-3n-skx-h1"
-      data-replacement: "replacement-1908-vpp-throughput-lat-tsa-3n-skx-vhost"
     - title: "2001"
       data-set: "vpp-performance-changes-3n-skx-ref"
     - title: "2005"
@@ -3485,7 +3432,6 @@
   columns:
     - title: "1908"
       data-set: "vpp-performance-changes-3n-skx-h1"
-      data-replacement: "replacement-1908-vpp-throughput-lat-tsa-3n-skx-vhost"
     - title: "2001"
       data-set: "vpp-performance-changes-3n-skx-ref"
     - title: "2005"
@@ -3509,7 +3455,6 @@
   columns:
     - title: "1908"
       data-set: "vpp-performance-changes-3n-skx-h1"
-      data-replacement: "replacement-1908-vpp-throughput-lat-tsa-3n-skx-vhost"
     - title: "2001"
       data-set: "vpp-performance-changes-3n-skx-ref"
     - title: "2005"
@@ -3533,7 +3478,6 @@
   columns:
     - title: "1908"
       data-set: "vpp-performance-changes-3n-skx-h1"
-      data-replacement: "replacement-1908-vpp-throughput-lat-tsa-3n-skx-vhost"
     - title: "2001"
       data-set: "vpp-performance-changes-3n-skx-ref"
     - title: "2005"
@@ -3633,7 +3577,6 @@
   columns:
     - title: "1908"
       data-set: "vpp-performance-changes-2n-skx-h1"
-      data-replacement: "replacement-1908-vpp-throughput-lat-tsa-2n-skx-vhost"
     - title: "2001"
       data-set: "vpp-performance-changes-2n-skx-ref"
     - title: "2005"
@@ -3657,7 +3600,6 @@
   columns:
     - title: "1908"
       data-set: "vpp-performance-changes-2n-skx-h1"
-      data-replacement: "replacement-1908-vpp-throughput-lat-tsa-2n-skx-vhost"
     - title: "2001"
       data-set: "vpp-performance-changes-2n-skx-ref"
     - title: "2005"
@@ -3681,7 +3623,6 @@
   columns:
     - title: "1908"
       data-set: "vpp-performance-changes-2n-skx-h1"
-      data-replacement: "replacement-1908-vpp-throughput-lat-tsa-2n-skx-vhost"
     - title: "2001"
       data-set: "vpp-performance-changes-2n-skx-ref"
     - title: "2005"
@@ -3705,7 +3646,6 @@
   columns:
     - title: "1908"
       data-set: "vpp-performance-changes-2n-skx-h1"
-      data-replacement: "replacement-1908-vpp-throughput-lat-tsa-2n-skx-vhost"
     - title: "2001"
       data-set: "vpp-performance-changes-2n-skx-ref"
     - title: "2005"
@@ -4592,19 +4532,19 @@
   include-tests: "MRR" # "PDR" | "NDR" | "MRR"
   filter: "'2T1C' and 'MRR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
-      data-set: "vpp-performance-changes-3n-skx-mrr-h1"
+#    - title: "1908"
+#      data-set: "vpp-performance-changes-3n-skx-mrr-h1"
     - title: "2001"
       data-set: "vpp-performance-changes-3n-skx-mrr-ref"
     - title: "2005"
       data-set: "vpp-performance-changes-3n-skx-mrr-cmp"
   comparisons:
     - title: "Diff"
-      reference: 2
-      compare: 3
+      reference: 1
+      compare: 2
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
+    - "2001, 2005 - VPP versions tested."
     - "Diff - difference between 2001 and 2005 VPP version."
 
 # VPP Performance Changes 3n-skx 4t2c mrr
@@ -4615,19 +4555,19 @@
   include-tests: "MRR" # "PDR" | "NDR" | "MRR"
   filter: "'4T2C' and 'MRR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
-      data-set: "vpp-performance-changes-3n-skx-mrr-h1"
+#    - title: "1908"
+#      data-set: "vpp-performance-changes-3n-skx-mrr-h1"
     - title: "2001"
       data-set: "vpp-performance-changes-3n-skx-mrr-ref"
     - title: "2005"
       data-set: "vpp-performance-changes-3n-skx-mrr-cmp"
   comparisons:
     - title: "Diff"
-      reference: 2
-      compare: 3
+      reference: 1
+      compare: 2
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
+    - "2001, 2005 - VPP versions tested."
     - "Diff - difference between 2001 and 2005 VPP version."
 
 # VPP Performance Changes 3n-skx 8t4c mrr
@@ -4638,19 +4578,19 @@
   include-tests: "MRR" # "PDR" | "NDR" | "MRR"
   filter: "'8T4C' and 'MRR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
-      data-set: "vpp-performance-changes-3n-skx-mrr-h1"
+#    - title: "1908"
+#      data-set: "vpp-performance-changes-3n-skx-mrr-h1"
     - title: "2001"
       data-set: "vpp-performance-changes-3n-skx-mrr-ref"
     - title: "2005"
       data-set: "vpp-performance-changes-3n-skx-mrr-cmp"
   comparisons:
     - title: "Diff"
-      reference: 2
-      compare: 3
+      reference: 1
+      compare: 2
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
+    - "2001, 2005 - VPP versions tested."
     - "Diff - difference between 2001 and 2005 VPP version."
 
 # VPP Performance Changes 2n-skx 2t1c mrr
@@ -4661,19 +4601,19 @@
   include-tests: "MRR" # "PDR" | "NDR" | "MRR"
   filter: "'2T1C' and 'MRR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
-      data-set: "vpp-performance-changes-2n-skx-mrr-h1"
+#    - title: "1908"
+#      data-set: "vpp-performance-changes-2n-skx-mrr-h1"
     - title: "2001"
       data-set: "vpp-performance-changes-2n-skx-mrr-ref"
     - title: "2005"
       data-set: "vpp-performance-changes-2n-skx-mrr-cmp"
   comparisons:
     - title: "Diff"
-      reference: 2
-      compare: 3
+      reference: 1
+      compare: 2
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
+    - "2001, 2005 - VPP versions tested."
     - "Diff - difference between 2001 and 2005 VPP version."
 
 # VPP Performance Changes 2n-skx 4t2c mrr
@@ -4684,19 +4624,19 @@
   include-tests: "MRR" # "PDR" | "NDR" | "MRR"
   filter: "'4T2C' and 'MRR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
-      data-set: "vpp-performance-changes-2n-skx-mrr-h1"
+#    - title: "1908"
+#      data-set: "vpp-performance-changes-2n-skx-mrr-h1"
     - title: "2001"
       data-set: "vpp-performance-changes-2n-skx-mrr-ref"
     - title: "2005"
       data-set: "vpp-performance-changes-2n-skx-mrr-cmp"
   comparisons:
     - title: "Diff"
-      reference: 2
-      compare: 3
+      reference: 1
+      compare: 2
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
+    - "2001, 2005 - VPP versions tested."
     - "Diff - difference between 2001 and 2005 VPP version."
 
 # VPP Performance Changes 2n-skx 8t4c mrr
@@ -4707,19 +4647,19 @@
   include-tests: "MRR" # "PDR" | "NDR" | "MRR"
   filter: "'8T4C' and 'MRR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
-      data-set: "vpp-performance-changes-2n-skx-mrr-h1"
+#    - title: "1908"
+#      data-set: "vpp-performance-changes-2n-skx-mrr-h1"
     - title: "2001"
       data-set: "vpp-performance-changes-2n-skx-mrr-ref"
     - title: "2005"
       data-set: "vpp-performance-changes-2n-skx-mrr-cmp"
   comparisons:
     - title: "Diff"
-      reference: 2
-      compare: 3
+      reference: 1
+      compare: 2
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
+    - "2001, 2005 - VPP versions tested."
     - "Diff - difference between 2001 and 2005 VPP version."
 
 # VPP Performance Changes 2n-clx-xxv710 2t1c mrr
@@ -13803,9 +13743,9 @@
     - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Ip6-Ip6Base-Srv6Enc1Sid-Ndrpdr.78B-2t1c-avf-ethip6ip6-ip6base-srv6enc1sid-ndrpdr"
     - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Enc2Sids-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6enc2sids-ndrpdr"
     - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Enc2Sids-Nodecaps-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6enc2sids-nodecaps-ndrpdr"
-    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Dyn-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-dyn-ndrpdr"
-    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Masq-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-masq-ndrpdr"
-    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Stat-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-stat-ndrpdr"
+#    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Dyn-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-dyn-ndrpdr"
+#    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Masq-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-masq-ndrpdr"
+#    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Stat-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-stat-ndrpdr"
   layout:
     title: "3n-skx-xxv710-78b-2t1c-srv6-ip6routing-base-avf-ndr"
     layout: "plot-throughput"
@@ -13819,9 +13759,9 @@
     - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Ip6-Ip6Base-Srv6Enc1Sid-Ndrpdr.78B-2t1c-avf-ethip6ip6-ip6base-srv6enc1sid-ndrpdr"
     - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Enc2Sids-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6enc2sids-ndrpdr"
     - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Enc2Sids-Nodecaps-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6enc2sids-nodecaps-ndrpdr"
-    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Dyn-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-dyn-ndrpdr"
-    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Masq-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-masq-ndrpdr"
-    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Stat-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-stat-ndrpdr"
+#    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Dyn-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-dyn-ndrpdr"
+#    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Masq-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-masq-ndrpdr"
+#    - "Tests.Vpp.Perf.Srv6.25Ge2P1Xxv710-Avf-Ethip6Srhip6-Ip6Base-Srv6Proxy-Stat-Ndrpdr.78B-2t1c-avf-ethip6srhip6-ip6base-srv6proxy-stat-ndrpdr"
   layout:
     title: "3n-skx-xxv710-78b-2t1c-srv6-ip6routing-base-avf-pdr"
     layout: "plot-throughput"
@@ -17638,7 +17578,7 @@
   output-file: "{DIR[STATIC,VPP]}/2n-clx-cx556a-64b-2t1c-rdma-l2-eth-2memif-1dcr-ndr"
   data: "plot-vpp-throughput-lat-tsa-2n-clx"
   include:
-    - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Dot1Q-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-dot1q-l2bdbasemaclrn-eth-2memif-1dcr-ndrpdr"
+#    - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Dot1Q-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-dot1q-l2bdbasemaclrn-eth-2memif-1dcr-ndrpdr"
     - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Eth-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-eth-l2bdbasemaclrn-eth-2memif-1dcr-ndrpdr"
     - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Eth-L2Xcbase-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-eth-l2xcbase-eth-2memif-1dcr-ndrpdr"
     - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Ethip4-Ip4Base-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-ethip4-ip4base-eth-2memif-1dcr-ndrpdr"
@@ -17652,7 +17592,7 @@
   output-file: "{DIR[STATIC,VPP]}/2n-clx-cx556a-64b-2t1c-rdma-l2-eth-2memif-1dcr-pdr"
   data: "plot-vpp-throughput-lat-tsa-2n-clx"
   include:
-    - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Dot1Q-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-dot1q-l2bdbasemaclrn-eth-2memif-1dcr-ndrpdr"
+#    - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Dot1Q-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-dot1q-l2bdbasemaclrn-eth-2memif-1dcr-ndrpdr"
     - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Eth-L2Bdbasemaclrn-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-eth-l2bdbasemaclrn-eth-2memif-1dcr-ndrpdr"
     - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Eth-L2Xcbase-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-eth-l2xcbase-eth-2memif-1dcr-ndrpdr"
     - "Tests.Vpp.Perf.Container Memif.2N1L-100Ge2P1Cx556A-Rdma-Ethip4-Ip4Base-Eth-2Memif-1Dcr-Ndrpdr.64B-2t1c-rdma-ethip4-ip4base-eth-2memif-1dcr-ndrpdr"
