--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -363,6 +363,7 @@
         - 58  # 2n-clx nfv-density-00
         - 59  # 2n-clx nfv-density-00
         - 60  # 2n-clx nfv-density-00
+        - 61  # 2n-clx nfv-density-00
 
     plot-vpp-nfv-2n-clx-mrr:
       csit-vpp-perf-report-iterative-2005-2n-clx:
@@ -571,11 +572,13 @@
         - 15  # perf-full-3n-skx-ip4_IV
         - 17  # perf-full-3n-skx-ip4_VI
         - 18  # perf-full-3n-skx-ip4_VII
+        - 19  # perf-full-3n-skx-ip4_VIII
         - 20  # perf-full-3n-skx-ip4_IX
         - 24  # perf-full-3n-skx-ip6_I
         - 22  # perf-full-3n-skx-ip4tunnels-II
         - 23  # perf-full-3n-skx-ip4tunnels-III
         - 26  # perf-full-3n-skx-ip6tunnels-I
+        - 28  # perf-full-3n-skx-l2_II
 
     vpp-perf-results-2n-skx:
       # TODO: Add data:
@@ -2320,11 +2323,13 @@
       - 15  # perf-full-3n-skx-ip4_IV
       - 17  # perf-full-3n-skx-ip4_VI
       - 18  # perf-full-3n-skx-ip4_VII
+      - 19  # perf-full-3n-skx-ip4_VIII
       - 20  # perf-full-3n-skx-ip4_IX
       - 24  # perf-full-3n-skx-ip6_I
       - 22  # perf-full-3n-skx-ip4tunnels-II
       - 23  # perf-full-3n-skx-ip4tunnels-III
       - 26  # perf-full-3n-skx-ip6tunnels-I
+      - 28  # perf-full-3n-skx-l2_II
 
     csit-vpp-perf-verify-1908_1-2n-skx:
       - 39  # NDRPDR sel - new1908.1
@@ -2437,6 +2442,7 @@
       - 58  # 2n-clx nfv-density-00
       - 59  # 2n-clx nfv-density-00
       - 60  # 2n-clx nfv-density-00
+      - 61  # 2n-clx nfv-density-00
     csit-vpp-perf-report-coverage-2005-2n-clx:
       - 21  # perf-full-2n-clx-ip4_I
       - 2   # perf-full-2n-clx-ip4_II
@@ -11140,8 +11146,8 @@
            'NF_DENSITY' and
            'VHOST' and
            'VXLAN' and
-           'IMIX' and
            'CHAIN' and
+           'IMIX' and
            '2T1C' and
            'NDRPDR'"
   parameters:
