--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -755,6 +755,11 @@
         - 16  # NDRPDR sel
         - 18  # NDRPDR sel
         - 19  # NDRPDR sel
+    vpp-performance-changes-3n-hsw-cmp-2:
+      csit-vpp-perf-report-iterative-2005-3n-hsw:
+        - 20  # NDRPDR sel env 2
+        - 21  # NDRPDR sel env 2
+        - 22  # NDRPDR sel env 2
 
     vpp-performance-changes-3n-skx-h1:
       csit-vpp-perf-verify-1908_1-3n-skx:
@@ -2245,6 +2250,9 @@
       - 16  # NDRPDR sel
       - 18  # NDRPDR sel
       - 19  # NDRPDR sel
+      - 20  # NDRPDR sel env 2
+      - 21  # NDRPDR sel env 2
+      - 22  # NDRPDR sel env 2
       - 13  # MRR
     csit-vpp-perf-verify-2005-3n-hsw:
       - 3   # hoststack
@@ -3214,132 +3222,6 @@
 ################################################################################
 # VPP
 
-## VPP Performance changes 2n-skx-xxv710 2t1c ndr
-#- type: "table"
-#  title: "VPP Performance changes 2n-skx-xxv710 2t1c ndr"
-#  algorithm: "table_comparison"
-#  output-file: "{DIR[STATIC,VPP]}/performance-changes-1908_2-2n-skx-2t1c-ndr"
-#  include-tests: "NDR" # "PDR" | "NDR" | "MRR"
-#  filter: "'2T1C' and 'NDRPDR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
-#  columns:
-#    - title: "1908.1"
-#      data-set: "vpp-perf-changes-2n-skx-new1908_1"
-#    - title: "1908.2"
-#      data-set: "vpp-perf-changes-2n-skx-new1908_2"
-#  comparisons:
-#    - title: "Diff"
-#      reference: 1
-#      compare: 2
-#  legend:
-#    - "Legend to Table:"
-#    - "1908.1, 1908.2 - VPP versions tested."
-#    - "Diff - difference between the previous and the current VPP version."
-#
-## VPP Performance changes 2n-skx-xxv710 2t1c pdr
-#- type: "table"
-#  title: "VPP Performance changes 2n-skx-xxv710 2t1c pdr"
-#  algorithm: "table_comparison"
-#  output-file: "{DIR[STATIC,VPP]}/performance-changes-1908_2-2n-skx-2t1c-pdr"
-#  include-tests: "PDR" # "PDR" | "NDR" | "MRR"
-#  filter: "'2T1C' and 'NDRPDR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
-#  columns:
-#    - title: "1908.1"
-#      data-set: "vpp-perf-changes-2n-skx-new1908_1"
-#    - title: "1908.2"
-#      data-set: "vpp-perf-changes-2n-skx-new1908_2"
-#  comparisons:
-#    - title: "Diff"
-#      reference: 1
-#      compare: 2
-#  legend:
-#    - "Legend to Table:"
-#    - "1908.1, 1908.2 - VPP versions tested."
-#    - "Diff - difference between the previous and the current VPP version."
-#
-## VPP Performance changes 3n-skx-xxv710 2t1c ndr
-#- type: "table"
-#  title: "VPP Performance changes 3n-skx-xxv710 2t1c ndr"
-#  algorithm: "table_comparison"
-#  output-file: "{DIR[STATIC,VPP]}/performance-changes-1908_2-3n-skx-2t1c-ndr"
-#  include-tests: "NDR" # "PDR" | "NDR" | "MRR"
-#  filter: "'2T1C' and 'NDRPDR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
-#  columns:
-#    - title: "1908.1"
-#      data-set: "vpp-perf-changes-3n-skx-new1908_1"
-#    - title: "1908.2"
-#      data-set: "vpp-perf-changes-3n-skx-new1908_2"
-#  comparisons:
-#    - title: "Diff"
-#      reference: 1
-#      compare: 2
-#  legend:
-#    - "Legend to Table:"
-#    - "1908.1, 1908.2 - VPP versions tested."
-#    - "Diff - difference between the previous and the current VPP version."
-#
-## VPP Performance changes 3n-skx-xxv710 2t1c pdr
-#- type: "table"
-#  title: "VPP Performance changes 3n-skx-xxv710 2t1c pdr"
-#  algorithm: "table_comparison"
-#  output-file: "{DIR[STATIC,VPP]}/performance-changes-1908_2-3n-skx-2t1c-pdr"
-#  include-tests: "PDR" # "PDR" | "NDR" | "MRR"
-#  filter: "'2T1C' and 'NDRPDR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
-#  columns:
-#    - title: "1908.1"
-#      data-set: "vpp-perf-changes-3n-skx-new1908_1"
-#    - title: "1908.2"
-#      data-set: "vpp-perf-changes-3n-skx-new1908_2"
-#  comparisons:
-#    - title: "Diff"
-#      reference: 1
-#      compare: 2
-#  legend:
-#    - "Legend to Table:"
-#    - "1908.1, 1908.2 - VPP versions tested."
-#    - "Diff - difference between the previous and the current VPP version."
-#
-## VPP Performance changes 2n-clx-xxv710 2t1c ndr
-#- type: "table"
-#  title: "VPP Performance changes 2n-clx-xxv710 2t1c ndr"
-#  algorithm: "table_comparison"
-#  output-file: "{DIR[STATIC,VPP]}/performance-changes-1908_2-2n-clx-2t1c-ndr"
-#  include-tests: "NDR" # "PDR" | "NDR" | "MRR"
-#  filter: "'2T1C' and 'NDRPDR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
-#  columns:
-#    - title: "1908.1"
-#      data-set: "vpp-perf-changes-2n-clx-new1908_1"
-#    - title: "1908.2"
-#      data-set: "vpp-perf-changes-2n-clx-new1908_2"
-#  comparisons:
-#    - title: "Diff"
-#      reference: 1
-#      compare: 2
-#  legend:
-#    - "Legend to Table:"
-#    - "1908.1, 1908.2 - VPP versions tested."
-#    - "Diff - difference between the previous and the current VPP version."
-#
-## VPP Performance changes 2n-clx-xxv710 2t1c pdr
-#- type: "table"
-#  title: "VPP Performance changes 2n-clx-xxv710 2t1c pdr"
-#  algorithm: "table_comparison"
-#  output-file: "{DIR[STATIC,VPP]}/performance-changes-1908_2-2n-clx-2t1c-pdr"
-#  include-tests: "PDR" # "PDR" | "NDR" | "MRR"
-#  filter: "'2T1C' and 'NDRPDR' and 'NIC_Intel-XXV710' and not 'NF_DENSITY'"
-#  columns:
-#    - title: "1908.1"
-#      data-set: "vpp-perf-changes-2n-clx-new1908_1"
-#    - title: "1908.2"
-#      data-set: "vpp-perf-changes-2n-clx-new1908_2"
-#  comparisons:
-#    - title: "Diff"
-#      reference: 1
-#      compare: 2
-#  legend:
-#    - "Legend to Table:"
-#    - "1908.1, 1908.2 - VPP versions tested."
-#    - "Diff - difference between the previous and the current VPP version."
-
 # VPP Performance Changes 3n-hsw 1t1c pdr
 - type: "table"
   title: "VPP Performance Changes 3n-hsw 1t1c pdr"
@@ -3348,20 +3230,33 @@
   include-tests: "PDR" # "PDR" | "NDR" | "MRR"
   filter: "'1T1C' and 'NDRPDR' and 'NIC_Intel-XL710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
+    - title: "1908.1-2"
       data-set: "vpp-performance-changes-3n-hsw-h1"
-    - title: "2001"
+    - title: "2001.0-2"
       data-set: "vpp-performance-changes-3n-hsw-ref"
-    - title: "2005"
+    - title: "2005.0-2"
+      data-set: "vpp-performance-changes-3n-hsw-cmp-2"
+    - title: "2005.0-3"
       data-set: "vpp-performance-changes-3n-hsw-cmp"
   comparisons:
-    - title: "Diff"
+    - title: "Diff1"
+      reference: 3
+      compare: 4
+    - title: "Diff2"
       reference: 2
       compare: 3
+#  rca:
+#    - title: "RCA1"
+#      data: "rca/rca-2005-3n-hsw-1t1c-pdr-rca1.yaml"
+#    - title: "RCA2"
+#      data: "rca/rca-2005-3n-hsw-1t1c-pdr-rca2.yaml"
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
-    - "Diff - difference between 2001 and 2008 VPP version."
+    - 'YYMM.V-E - tested VPP version (YY year, MM month, V minor version) and CSIT test environment version (E environment version, "2" for 2020-03-27, "3" for 2020-XX-XX).'
+    - 'Diff1 - difference between environment versions "2" and "3" for the same VPP version, 2005.0-2 vs. 2005.0-3.'
+    - 'Diff2 - difference between the current and the previous VPP version in the current environment version "2", 2005.0-2 vs. 2001.0-2.'
+#    - 'RCA1 - root cause analysis reference for Diff1.'
+#    - 'RCA2 - root cause analysis reference for Diff2.'
 
 # VPP Performance Changes 3n-hsw 2t2c pdr
 - type: "table"
@@ -3371,20 +3266,33 @@
   include-tests: "PDR" # "PDR" | "NDR" | "MRR"
   filter: "'2T2C' and 'NDRPDR' and 'NIC_Intel-XL710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
+    - title: "1908.1-2"
       data-set: "vpp-performance-changes-3n-hsw-h1"
-    - title: "2001"
+    - title: "2001.0-2"
       data-set: "vpp-performance-changes-3n-hsw-ref"
-    - title: "2005"
+    - title: "2005.0-2"
+      data-set: "vpp-performance-changes-3n-hsw-cmp-2"
+    - title: "2005.0-3"
       data-set: "vpp-performance-changes-3n-hsw-cmp"
   comparisons:
-    - title: "Diff"
+    - title: "Diff1"
+      reference: 3
+      compare: 4
+    - title: "Diff2"
       reference: 2
       compare: 3
+#  rca:
+#    - title: "RCA1"
+#      data: "rca/rca-2005-3n-hsw-2t2c-pdr-rca1.yaml"
+#    - title: "RCA2"
+#      data: "rca/rca-2005-3n-hsw-2t2c-pdr-rca2.yaml"
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
-    - "Diff - difference between 2001 and 2008 VPP version."
+    - 'YYMM.V-E - tested VPP version (YY year, MM month, V minor version) and CSIT test environment version (E environment version, "2" for 2020-03-27, "3" for 2020-XX-XX).'
+    - 'Diff1 - difference between environment versions "2" and "3" for the same VPP version, 2005.0-2 vs. 2005.0-3.'
+    - 'Diff2 - difference between the current and the previous VPP version in the current environment version "2", 2005.0-2 vs. 2001.0-2.'
+#    - 'RCA1 - root cause analysis reference for Diff1.'
+#    - 'RCA2 - root cause analysis reference for Diff2.'
 
 # VPP Performance Changes 3n-hsw 1t1c ndr
 - type: "table"
@@ -3394,20 +3302,33 @@
   include-tests: "NDR" # "PDR" | "NDR" | "MRR"
   filter: "'1T1C' and 'NDRPDR' and 'NIC_Intel-XL710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
+    - title: "1908.1-2"
       data-set: "vpp-performance-changes-3n-hsw-h1"
-    - title: "2001"
+    - title: "2001.0-2"
       data-set: "vpp-performance-changes-3n-hsw-ref"
-    - title: "2005"
+    - title: "2005.0-2"
+      data-set: "vpp-performance-changes-3n-hsw-cmp-2"
+    - title: "2005.0-3"
       data-set: "vpp-performance-changes-3n-hsw-cmp"
   comparisons:
-    - title: "Diff"
+    - title: "Diff1"
+      reference: 3
+      compare: 4
+    - title: "Diff2"
       reference: 2
       compare: 3
+#  rca:
+#    - title: "RCA1"
+#      data: "rca/rca-2005-3n-hsw-1t1c-ndr-rca1.yaml"
+#    - title: "RCA2"
+#      data: "rca/rca-2005-3n-hsw-1t1c-ndr-rca2.yaml"
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
-    - "Diff - difference between 2001 and 2008 VPP version."
+    - 'YYMM.V-E - tested VPP version (YY year, MM month, V minor version) and CSIT test environment version (E environment version, "2" for 2020-03-27, "3" for 2020-XX-XX).'
+    - 'Diff1 - difference between environment versions "2" and "3" for the same VPP version, 2005.0-2 vs. 2005.0-3.'
+    - 'Diff2 - difference between the current and the previous VPP version in the current environment version "2", 2005.0-2 vs. 2001.0-2.'
+#    - 'RCA1 - root cause analysis reference for Diff1.'
+#    - 'RCA2 - root cause analysis reference for Diff2.'
 
 # VPP Performance Changes 3n-hsw 2t2c ndr
 - type: "table"
@@ -3417,20 +3338,33 @@
   include-tests: "NDR" # "PDR" | "NDR" | "MRR"
   filter: "'2T2C' and 'NDRPDR' and 'NIC_Intel-XL710' and not 'NF_DENSITY'"
   columns:
-    - title: "1908"
+    - title: "1908.1-2"
       data-set: "vpp-performance-changes-3n-hsw-h1"
-    - title: "2001"
+    - title: "2001.0-2"
       data-set: "vpp-performance-changes-3n-hsw-ref"
-    - title: "2005"
+    - title: "2005.0-2"
+      data-set: "vpp-performance-changes-3n-hsw-cmp-2"
+    - title: "2005.0-3"
       data-set: "vpp-performance-changes-3n-hsw-cmp"
   comparisons:
-    - title: "Diff"
+    - title: "Diff1"
+      reference: 3
+      compare: 4
+    - title: "Diff2"
       reference: 2
       compare: 3
+#  rca:
+#    - title: "RCA1"
+#      data: "rca/rca-2005-3n-hsw-2t2c-ndr-rca1.yaml"
+#    - title: "RCA2"
+#      data: "rca/rca-2005-3n-hsw-2t2c-ndr-rca2.yaml"
   legend:
     - "Legend to Table"
-    - "1908, 2001, 2005 - VPP versions tested."
-    - "Diff - difference between 2001 and 2008 VPP version."
+    - 'YYMM.V-E - tested VPP version (YY year, MM month, V minor version) and CSIT test environment version (E environment version, "2" for 2020-03-27, "3" for 2020-XX-XX).'
+    - 'Diff1 - difference between environment versions "2" and "3" for the same VPP version, 2005.0-2 vs. 2005.0-3.'
+    - 'Diff2 - difference between the current and the previous VPP version in the current environment version "2", 2005.0-2 vs. 2001.0-2.'
+#    - 'RCA1 - root cause analysis reference for Diff1.'
+#    - 'RCA2 - root cause analysis reference for Diff2.'
 
 ## VPP Root Cause Analysis 3n-skx-xxv710 2t1c pdr
 #- type: "table"
